external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_with_named_struct_field.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/positional_with_named_struct_field.move:3:24
  │
3 │     public struct Foo(f: u64) has copy, drop;
  │                      - ^ Expected ')'
  │                      │  
  │                      To match this '('

